# CLEA-exposure-verification

./: .gitignore  .gitlab-ci.yml  README.md
CLEA-lib/: README.md
CLEA-lib/c/: README.md  aes_internal.h  clea.c  clea.h  ecies.c  ecies.h  hmac-sha256.c  hmac-sha256.h  libecc.patch  simple_clea.c  simple_clea_rpi.c  test_aes256-gcm.py  test_clea.c  test_ecies.c  test_ecies.py  test_util.c  test_util.h
CLEA-lib/java/: README.md  pom.xml
CLEA-lib/java/src/main/java/fr/inria/clea/lsp/: CleaEciesEncoder.java  CleaEncodingException.java  CleaEncryptionException.java  EncryptedLocationSpecificPart.java  Location.java  LocationContact.java  LocationContactMessageEncoder.java  LocationContactValidator.java  LocationSpecificPart.java  LocationSpecificPartContactValidator.java  LocationSpecificPartDecoder.java  LocationSpecificPartEncoder.java  LocationSpecificPartValidator.java  LspEncoderDecoder.java
CLEA-lib/java/src/main/java/fr/inria/clea/lsp/exception/: CleaCryptoException.java  CleaEncodingException.java  CleaEncryptionException.java  CleaInvalidLocationContactMessageException.java  CleaInvalidLocationMessageException.java
CLEA-lib/java/src/main/java/fr/inria/clea/lsp/utils/: TimeUtils.java
CLEA-lib/java/src/test/java/fr/inria/clea/lsp/: LocationContactValidationTest.java  LocationSpecificPartTest.java  LocationSpecificPartValidationTest.java  LocationTest.java  TimeUtilsTest.java
CLEA-lib/java/src/test/resources/: logback.xml  testDecoding.csv  testLSPDecoding.csv  testLocationDecoding.csv
CLEA-lib/js/: README.md  clea.js  index.html  index.js  karma.conf.js  package.json  style.css
CLEA-lib/js/src/: index.html
CLEA-lib/js/src/css/: style.css
CLEA-lib/js/src/js/: clea.js  index.js
CLEA-lib/js/test/: clea.spec.js  cryptotest.js  dataset.js
CLEA-lib/test/: README.md  encode_in.json  test_clea.html  test_clea.js  test_clea.py
CLEA-lib/test/web_decoder/: decode.js  index.html  style.css
c/: CMakeLists.txt  aes-gcm.c  aes-gcm.h  clea.h  ecies.c  test_aes-gcm.c  test_hmac-sha256-128.c  test_util.c
documents/: CLEA-specification-EN.md  CLEA-specification-v0-EN.md
java/: README.md  pom.xml
java/src/clea/lsp/: Data.java  Decode.java  Ecies.java  Encode.java  Test.java
java/src/main/java/fr/inria/clea/lsp/: CleaEciesEncoder.java  CleaEncryptionException.java  Data.java  Decode.java  Ecies.java  Encode.java  Location.java  LocationContact.java  LocationSpecificPart.java  LocationSpecificPartDecoder.java  LocationSpecificPartEncoder.java  LspEncoderDecoder.java
java/src/main/java/fr/inria/clea/lsp/utils/: TimeUtils.java
java/src/test/java/fr/inria/clea/lsp/: LocationSpecificPartTest.java
js/: index.html  test.js
test/: encode_in.json  test_clea.py
